--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ nav ul a:hover{
 }
 
 .navbar-second{
-    padding: 16px 0;
+    padding: 16px 24px;
     border-bottom: 1px solid #b1b1b1;
 }
 .navbar-second .second-container{
@@ -64,6 +64,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 .ribbon{
     width: 100%;
@@ -105,13 +106,15 @@ main{
 }
 .hero p{
     text-align: center;
-    max-width: 70%;
+    max-width: 50%;
     color: #333;
     line-height: 140%;
+    margin-top: 16px;
 }
 .price{
-    margin: 16px 0;
+    margin: 24px 0 16px 0;
     font-size: 1.5rem;
+    opacity: 0.8;
 }
 
 .btn{
@@ -121,6 +124,11 @@ main{
     border-radius: 24px;
     margin-bottom: 48px;
 }
+
+.phone{
+    width: 100%;
+}
+
 .color{
     width: 100%;
     display: flex;
@@ -133,7 +141,43 @@ main{
     height: 48px;
     background-color: #333;
     border-radius: 50%;
-    margin: 24px 0;
+    margin: 64px 0;
     border: 2px solid white;
     box-shadow: 1px 1px 1px;
+}
+.color .silver{
+    background-color: #f1f2ed;   
+}
+.color .golden{
+    background-color: #fae7cf;   
+}
+.color .grafite{
+    background-color: #54524f;   
+}
+.color .green{
+    background-color: #394c38;   
+}
+.color .blue{
+    background-color: #a7c1d9;   
+}
+
+@media screen and (max-width: 640px) {
+    nav ul a{
+        display: none;
+        align-items: center;
+        justify-content: center;
+    }
+    nav ul{
+        justify-content: center;
+    }
+    .logo{
+        display: flex;
+        margin: 0 auto;
+    }
+    .second-links a{
+        display: none;
+    }
+    .phone{
+        margin-left: 92px;
+    }
 }
